--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "qs": "^6.5.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-flip-toolkit": "4.0.4",
+    "react-flip-toolkit": "@5.0.0-beta0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
