--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "^0.1.0-11",
     "@svgr/cli": "^2.1.1",
-    "animejs": "^2.2.0",
+    "animejs": "^3.0.1",
     "qs": "^6.5.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-flip-toolkit": "@5.0.0-beta0",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-flip-toolkit": "6.5.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "sanitize.css": "^6.0.0",
-    "styled-components": "^3.4.2"
+    "sanitize.css": "^8.0.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
