--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn run build; cd build; cp index.html 200.html; surge --domain react-flip-toolkit.surge.sh"
   },
   "devDependencies": {}
 }
