--- a/package.json
+++ b/package.json
@@ -6,17 +6,15 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0-14",
     "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@fortawesome/react-fontawesome": "^0.1.0-11",
-    "@svgr/cli": "^2.1.1",
-    "animejs": "^3.0.1",
-    "qs": "^6.5.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-flip-toolkit": "6.5.7",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "sanitize.css": "^8.0.0",
-    "styled-components": "^4.1.3"
+    "animejs": "^3.1.0",
+    "qs": "^6.7.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-flip-toolkit": "alpha",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "sanitize.css": "^11.0.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,5 +23,13 @@
     "eject": "react-scripts eject",
     "deploy": "yarn run build; cd build; cp index.html 200.html; surge --domain react-flip-toolkit.surge.sh"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react-scripts": "2.1.5"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
